--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -2,10 +2,12 @@
 meta(charset='UTF-8')
 meta(http-equiv="X-UA-Compatible" content="ie=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
-meta(name="author" content="icons")
-meta(name="keywords" content="parada, digital, creative, agency, portfolio, slider, hero, website, design")
+meta(name="author" content="padel")
 title #{PageTitle}
-link(rel='shortcut icon' href='http://www.egicons.com/themes/icons/assets/ico/favicon.png')
-link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rajdhani:400,500,600,700&display=swap")
-link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Corben:400,700&display=swap")
+//- link(rel='shortcut icon' href='')
+link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css')
+link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap" rel="stylesheet')
+link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet')
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css")
+link(rel='stylesheet' href='css/style.min.css')
