--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,3 +1,6 @@
-$mainColor: #e2001a;
-$primaryColor: #2e2e2f;
-$primaryColor: #0e141a;
+$darkColor: #111;
+$lightColor: #eeeeee;
+$mainColor: #00adb5;
+$secondaryColor: #393e46;
+$mainFont: 'Dosis', sans-serif;
+$textFont: 'Poppins', sans-serif;
