--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,6 +1,6 @@
 $darkColor: #111;
-$lightColor: #eeeeee;
-$mainColor: #00adb5;
-$secondaryColor: #393e46;
+$lightColor: #f2f2f2;
+$mainColor: #8EA946;
+$textColor: #7e7e7e;
 $mainFont: 'Dosis', sans-serif;
 $textFont: 'Poppins', sans-serif;
