--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,190 +11,5 @@
 @import "partials/global";
 @import "partials/helper";
 @import "partials/header";
+@import "partials/homePage";
 @import "partials/footer";
-@import "partials/works";
-
-//SLIDER STUFF
-.slider-wraper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.slider--item {
-  width: 100%;
-  height: 450px;
-  overflow: hidden;
-  position: relative;
-  img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: cover;
-  }
-  &:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,.5);
-    z-index: 19999;
-  }
-}
-.slick-slide {
-  position: relative;
-  outline: none;
-  z-index: 1;  
-  &.slick-current {
-    z-index: 2;
-  }
-}
-.slick-track,.slick-list {
-  will-change: transform;
-}
-.slick-arrow {
-  position: absolute;
-  top: 0;
-  width: 150px;
-  height: 100%;
-  border: none;
-  outline: none;
-  background-color: rgba(255,255,255,0);
-  text-indent: -999999px;
-  z-index: 999;
-  cursor: pointer;
-  &:before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 30px;
-    height: 30px;
-    top: 50%;
-    margin-top: -14px;
-    transition: all 0.3s cubic-bezier(.55,0,.1,1);
-  }
-  &:after {
-    content: "";
-    position: absolute;
-    display: block;
-    height: 2px;
-    width: 160px;
-    top: 50%;
-    background-color: rgba(255,255,255,1);
-    transition: all 0.4s 0.1s cubic-bezier(.55,0,.1,1);
-    opacity: 0;
-  }  
-  &.slick-prev {
-    left: 0;
-    &:before {
-      border-top: 2px solid rgba(255,255,255,1);
-      border-left: 2px solid rgba(255,255,255,1);
-      left: 50px;
-      transform: rotate(-45deg);
-    }
-    &:after {
-      left: 110px;
-    }
-    &:hover {
-      &:before {
-        left: 120px;
-      }
-      &:after {
-        left: 117px;
-        opacity: 1;
-        width: 80px;
-      }
-    }
-  }
-  &.slick-next {
-    right: 0;
-    &:before {
-      border-bottom: 2px solid rgba(255,255,255,1);
-      border-right: 2px solid rgba(255,255,255,1);
-      right: 50px;
-      transform: rotate(-45deg);
-    }
-    &:after {
-      right: 110px;
-    }
-    &:hover {
-      &:before {
-        right: 120px;
-      }
-      &:after {
-        right: 117px;
-        opacity: 1;
-        width: 80px;
-      }
-    }
-  }
-}
-//SLICK DOTS
-.slick-dots {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  position: absolute;
-  bottom: 30px;
-  text-align: center;  
-  li {
-     display: inline-block;
-     vertical-align: middle;
-      margin: 0 6px;    
-    &.slick-active {
-      button {
-        background-color: rgba(255,255,255,1);
-        height: 14px;
-        width: 14px;        
-        &:hover {
-        background-color: rgba(255,255,255,1);
-        }
-      }
-    }    
-    button {
-      outline: none;
-      display: block;
-      width: 18px;
-      height: 18px;
-      border: 1px solid rgba(255,255,255,1);
-      background-color: rgba(255,255,255,0);
-      text-indent: -999999px;
-      border-radius: 100%;
-      cursor: pointer;
-      transition: all 0.2s ease-in;      
-      &:hover {
-        background-color: rgba(255,255,255,0.5);
-      }
-    }
-  }
-}
-
-.do-transition {
-  animation: 
-    motion-blur 0.1s linear forwards,
-    motion-blur 0.4s linear reverse forwards 0.1s;
-}
-@keyframes motion-blur {
-  0% {
-    filter: blur(0px) grayscale(0%);
-  }
-  15% {
-    filter: blur(2px) grayscale(20%);
-  }
-  30% {
-    filter: blur(3px) grayscale(40%);
-  }
-  45% {
-    filter: blur(5px) grayscale(60%);
-  }
-  60% {
-    filter: blur(7px) grayscale(80%);
-  }
-  75%,
-  100% {
-    filter: blur(8px) grayscale(100%);
-  }
-}
-
