--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,25 +5,86 @@ html
         include partials/head
     body
         include partials/header
-        .banner
-            .container-fluid
-                .row
-                    .col-md-8
-                        .slider-wrapper
-                            .slider
-                                .slider--item
-                                    img(src='img/homeSlider/slide01.jpg' class='img-fluid')
-                                .slider--item
-                                    img(src='img/homeSlider/slide02.jpg' class='img-fluid')
-                                .slider--item
-                                    img(src='img/homeSlider/slide03.jpg' class='img-fluid')
-                                .slider--item
-                                    img(src='img/homeSlider/slide04.jpeg' class='img-fluid')
-                                .slider--item
-                                    img(src='img/homeSlider/slide05.jpg' class='img-fluid')
-                    .col-md-4
-
-
+        section.banner
+            .container
+                .inner-banner.px-md-3
+                    .slider-wrapper
+                        .row
+                            .col-lg-7
+                                .image-slider.h-100
+                                    .slider--item
+                                        img(src='img/homeSlider/slide01.jpg' class='img-fluid')
+                                    .slider--item
+                                        img(src='img/homeSlider/slide02.jpg' class='img-fluid')
+                                    .slider--item
+                                        img(src='img/homeSlider/slide03.jpg' class='img-fluid')
+                                    .slider--item
+                                        img(src='img/homeSlider/slide04.jpeg' class='img-fluid')
+                                    .slider--item
+                                        img(src='img/homeSlider/slide05.jpg' class='img-fluid')
+                            .col-lg-5
+                                .text-slider.h-100.mt-3.mt-lg-0
+                                    .text--slide
+                                        h1.text-uppercase.stroked-title
+                                            span padel is awesome
+                                        p.text-capitalize Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus blanditiis beatae distinctio quibusdam, quae delectus non saepe. Quisquam aliquam quaerat eos nam quis? Alias nulla fugit eaque ab sequi molestiae mollitia aliquam adipisci tempore facere delectus modi, unde at, corporis minus magnam! Vel iure ab vitae enim, quae possimus explicabo labore aspernatur consequuntur modi aperiam obcaecati omnis quisquam eligendi, assumenda id hic libero suscipit culpa magni? Unde consequatur obcaecati animi architecto esse pariatur adipisci enim. Incidunt tempore voluptates sunt nisi hic sint atque vel excepturi pariatur debitis quo, aperiam velit minus recusandae quia? Id obcaecati nisi dolor voluptate adipisci inventore? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus rem totam obcaecati magnam velit sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.
+                                    .text--slide
+                                        h1.text-uppercase.stroked-title
+                                            span padel is nice sport to do
+                                        p.text-capitalize Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, laudantium. sit amet consectetur adipisicing elit. Voluptate unde alias necessitatibus molestias nihil eum deserunt eaque minima iste asperiores. Fugit maxime nulla recusandae eos, distinctio reprehenderit temporibus veniam tempore!
+                                    .text--slide
+                                        h1.text-uppercase.stroked-title
+                                            span padel is beautiful
+                                        p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dicta velit fugit! sit amet consectetur, adipisicing elit. Ab, vero! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    .text--slide
+                                        h1.text-uppercase.stroked-title
+                                            span padel is unique
+                                        p.text-capitalize Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. consectetur adipisicing elit. Beatae eaque cumque delectus minus animi. Quaerat cum eveniet voluptatum et minus sequi commodi eius porro accusamus! Suscipit facere quidem vitae eveniet cupiditate. At facilis sunt dolores.
+                                    .text--slide
+                                        h1.text-uppercase.stroked-title
+                                            span padel is amazing
+                                        p.text-capitalize Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aperiam soluta ipsa maxime pariatur id! consectetur adipisicing elit. Quos aspernatur voluptates quia labore mollitia tempore maiores hic adipisci!
+                        .login-corner.mt-5.mt-lg-0
+                            form(action="")
+                                .form-group
+                                    input(type='text' placeholder='user name').form-control.text-capitalize
+                                .form-group
+                                    input(type='password' placeholder='password').form-control.text-capitalize
+                                .log-btn
+                                    button(type='submit').global-btn-style.text-capitalize login
+        hr
+        section.text-section(data-aos='fade' data-aos-duration="2000")
+            .container
+                .text-area.py-5.px-md-3
+                    h2.text-title.text-uppercase.stroked-title.mb-4
+                        span how the rating system works?
+                    p.description
+                        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi laudantium dicta voluptates rerum quidem distinctio necessitatibus officiis iure eum est? Perspiciatis assumenda ducimus at eaque temporibus reiciendis sapiente iure minus? Blanditiis esciunt error  uibusdam culpa, minima animi quam accusamus. Unde, rerum.
+                    p.description
+                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat provident at vel aspernatur repellat mollitia.
+                    p.description
+                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ut, enim saepe eveniet nemo tempora dolorem, architecto maxime ab neque quam ducimus facere mollitia! Aliquam sequi cumque quod alias quidem.
+                    p.description
+                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ut, enim saepe eveniet nemo tempora dolorem, architecto maxime ab neque quam ducimus facere mollitia! Aliquam sequi cumque quod alias quidem.
+        hr
+        section.sponsers.py-5(data-aos='fade' data-aos-duration="2000")
+            .container
+                .sponsers-slider
+                    .item
+                        img(src='img/sponsersSlider/slide01.png' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide02.png' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide03.png' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide04.jpg' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide02.png' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide05.jpg' class='img-fluid')
+                    .item
+                        img(src='img/sponsersSlider/slide01.png' class='img-fluid')
+        hr
         include partials/footer
         include partials/footerScripts
         
