--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -4,10 +4,10 @@ meta(http-equiv="X-UA-Compatible" content="ie=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 meta(name="author" content="padel")
 title #{PageTitle}
-//- link(rel='shortcut icon' href='')
+link(rel='shortcut icon' href='img/favicon.png')
 link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap" rel="stylesheet')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet')
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
-link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css")
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css")
 link(rel='stylesheet' href='css/style.min.css')
