--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -1,14 +1,18 @@
 header.header
     .container
         .nav--bar.d-flex.justify-content-between.align-items-center
-            .logo logo
-            nav.nav.py-3
-                ul.links.d-flex
-                    li.item.ml-4
+            .logo
+                a(href='index.html')
+                    img(src='img/logo.svg' class='img-fluid' draggable='false')
+            nav.nav
+                ul.links.d-flex.align-items-center
+                    li.item
                         a.link(href="#" class='text-uppercase') Home
-                    li.item.ml-4
+                    li.item
                         a.link(href="#" class='text-uppercase') leaderboard
-                    li.item.ml-4
+                    li.item
                         a.link(href="#" class='text-uppercase') challenges
-                    li.item.ml-4
+                    li.item
                         a.link(href="#" class='text-uppercase') my profile
+                    li.item
+                        a.link(href="#" class='text-uppercase') login
