--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -4,6 +4,9 @@ body {
     font-family: $textFont;
 	overflow-x: hidden;
 }
+.container {
+	background: $lightColor;
+}
 h1, h2, h3, h4, h5, h6 {
 	font-family: $mainFont;
 }
