--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,31 +31,26 @@ html
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is nice sport to do
-                                        p.text-capitalize Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, laudantium. sit amet consectetur adipisicing elit. Voluptate unde alias necessitatibus molestias nihil eum deserunt eaque minima iste asperiores. Fugit maxime nulla recusandae eos, distinctio reprehenderit temporibus veniam tempore!
+                                        p.text-capitalize Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Autem, laudantium. sit amet consectetur adipisicing elit. Voluptate unde alias necessitatibus molestias nihil eum deserunt eaque minima iste asperiores. Fugit maxime nulla recusandae eos, distinctio reprehenderit temporibus veniam tempore!
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is beautiful
-                                        p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dicta velit fugit! sit amet consectetur, adipisicing elit. Ab, vero! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dicta velit fugit! sit amet consectetur, adipisicing elit. Ab, vero! Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is unique
-                                        p.text-capitalize Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. consectetur adipisicing elit. Beatae eaque cumque delectus minus animi. Quaerat cum eveniet voluptatum et minus sequi commodi eius porro accusamus! Suscipit facere quidem vitae eveniet cupiditate. At facilis sunt dolores.
+                                        p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. consectetur adipisicing elit. Beatae eaque cumque delectus minus animi. Quaerat cum eveniet voluptatum et minus sequi commodi eius porro accusamus! Suscipit facere quidem vitae eveniet cupiditate. At facilis sunt dolores.
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is amazing
-                                        p.text-capitalize Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aperiam soluta ipsa maxime pariatur id! consectetur adipisicing elit. Quos aspernatur voluptates quia labore mollitia tempore maiores hic adipisci!
-                        .login-corner.mt-5.mt-lg-0
-                            form(action="")
-                                .form-group
-                                    input(type='text' placeholder='user name').form-control.text-capitalize
-                                .form-group
-                                    input(type='password' placeholder='password').form-control.text-capitalize
-                                .log-btn
-                                    button(type='submit').global-btn-style.text-capitalize login
+                                        p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aperiam soluta ipsa maxime pariatur id! consectetur adipisicing elit. Quos aspernatur voluptates quia labore mollitia tempore maiores hic adipisci!
+                        .login-corner
+                            .log-btn
+                                a(href='login,html').global-btn-style.text-capitalize login
         hr
         section.text-section(data-aos='fade' data-aos-duration="2000")
-            .container
-                .text-area.py-5.px-md-3
+            .container.p-4
+                .text-area
                     h2.text-title.text-uppercase.stroked-title.mb-4
                         span how the rating system works?
                     p.description
