--- a/src/pug/partials/footer.pug
+++ b/src/pug/partials/footer.pug
@@ -2,5 +2,4 @@ footer.footer
     .container
         .text-inner
             p.text-center.text-white.m-0
-                | © 2019 BANDEJA . All Rights Reserved. Developed By 
-                <a href="http://v2.icons-agency.com/en-eg" target='_blank'><strong>ICONS</strong></a>
+                | © 2019 <strong>BANDEJA</strong> . All Rights Reserved
