--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -7,7 +7,7 @@ footer {
             p {
                 font-size: .95rem;
                 font-family: $mainFont;
-                a {
+                strong {
                     color: $mainColor;
                 }
             }
