--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -2,5 +2,6 @@ $darkColor: #111;
 $lightColor: #f2f2f2;
 $mainColor: #8EA946;
 $textColor: #7e7e7e;
+$borderColor: #e1e1e1;
 $mainFont: 'Dosis', sans-serif;
 $textFont: 'Poppins', sans-serif;
