--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -3,10 +3,13 @@ header.header {
         background: #222;
         padding: 0;
         .nav--bar {
+            @media (max-width: 991px) {
+                padding: 1rem 0;
+            }
             .logo {
                 width: 170px;
                 overflow: hidden;
-                padding-left: 1rem;
+                margin-left: 1rem;
                 a {
                     display: block;
                     img {
@@ -18,37 +21,133 @@ header.header {
             nav.nav {
                 ul.links {
                     li.item {
-                        a.link {
-                            display: block;
-                            color: #fff;
-                            font-size: .8rem;
-                            font-family: $mainFont;
-                            padding: 1.3rem 1rem;
-                            border-right: 1px solid #000;
-                            transition: all .1s linear;
-                            &:hover {
-                                background: rgba(0,0,0,.3);
-                            }
+                        border-right: 1px solid #000;
+                        transition: all .1s linear;
+                        &:hover {
+                            background: rgba(0,0,0,.3);
                         }
-                        &:last-child .link {
-                            border-right: none;
-                        }
-                        &:first-child .link {
+                        &:first-child {
                             border-bottom: 2px solid #f53b57;
                         }
-                        &:nth-child(2) .link {
+                        &:nth-child(2) {
                             border-bottom: 2px solid #ffd32a;
                         }
-                        &:nth-child(3) .link {
+                        &:nth-child(3) {
                             border-bottom: 2px solid #0be881;
                         }
-                        &:nth-child(4) .link {
+                        &:nth-child(4) {
                             border-bottom: 2px solid #3c40c6;
                         }
-                        &:nth-child(5) .link {
+                        &:nth-child(5) {
                             border-bottom: 2px solid #00a8ff;
                         }
+                        &:last-child {
+                            border-right: none;
+                        }
+                        i {
+                            display: inline-block;
+                            vertical-align: middle;
+                            color: $mainColor;
+                            padding: .6rem;
+                        }
+                        a.link {
+                            display: inline-block;
+                            color: #fff;
+                            font-size: .9rem;
+                            font-family: $mainFont;
+                            padding: .6rem 1rem .6rem 0;
+                            @media (max-width: 991px) {
+                                display: block;
+                            }
+                        }
+                        @media (max-width: 991px) {
+                            width: 100%;
+                            border-right: 0;
+                            opacity: 0;
+                            transform: rotateY(90deg);
+                            transition: all .2s linear;
+                        }
                     }
+                    @media (max-width: 991px) {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: 9;
+                        width: 100%;
+                        height: auto;
+                        padding: 5rem 2rem;
+                        flex-direction: column;
+                        align-items: flex-start !important;
+                        background: $darkColor;
+                        transform: translateY(-100%) rotatex(90deg);
+                        transition: all .5s cubic-bezier(0.44,-1.1, 0.63, 2.75);
+                    }
+                    &.mobile-navbar {
+                        transform: translateY(0) rotatex(0);
+                        li.item {
+                            opacity: 1;
+                            transform: rotateY(0);
+                            // transition: all .2s linear;
+                            &:nth-child(1) {
+                                transition-delay: .4s;
+                            }
+                            &:nth-child(2) {
+                                transition-delay: .6s;
+                            }
+                            &:nth-child(3) {
+                                transition-delay: .8s;
+                            }
+                            &:nth-child(4) {
+                                transition-delay: 1s;
+                            }
+                            &:nth-child(5) {
+                                transition-delay: 1.2s;
+                            }
+                        }
+                    }
+                }
+            }                
+            .bars {
+                position: relative;
+                z-index: 10;
+                width: 30px;
+                height: 30px;
+                margin-right: 1rem;
+                margin-top: .65rem;
+                cursor: pointer;
+                &.toggle {
+                    .line:first-child {
+                        transform: translate(0, 8px) rotate(45deg);
+                        width: 25px !important;
+                        transition: all .2s linear !important;
+                    }
+                    .line:nth-child(2) {
+                        display: none;
+                    }
+                    .line:last-child {
+                        transform: translate(0, 1px) rotate(-45deg);
+                        width: 25px !important;
+                        transition: all .3s linear !important;
+                    }
+                }
+                .line {
+                    display: block;
+                    width: 100%;
+                    height: 2px;
+                    background: #fff;
+                    margin-bottom: .3rem;
+                    transition: all .2s linear !important;
+                    &:nth-of-type(2) {
+                        width: 24px;
+                    }
+                    &:last-of-type {
+                        margin-bottom: 0;
+                        width: 18px;
+                    }
+                }
+                &:hover .line {
+                    width: 30px;
+                    transition: .1s;
                 }
             }
         }
