--- a/src/sass/partials/_homePage.scss
+++ b/src/sass/partials/_homePage.scss
@@ -11,7 +11,7 @@
       .image-slider {
         padding: 1rem;
         background: #fff;
-        border: 1px solid #e1e1e1;    
+        border: 1px solid $borderColor;    
         .slider--item {
           width: 100%;
           height: 400px;
@@ -168,6 +168,7 @@
         .text--slide {
           display: block !important;
           h1 {
+            margin-bottom: 1.5rem;
             font-size: 1.7rem;
             animation: fadeOut .2s both;
             span {
@@ -188,7 +189,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(to bottom, transparent 0%, $lightColor 50%);
+                background: linear-gradient(to bottom, transparent 0%, $lightColor 90%);
                 background-size: 100% 100%;
                 background-position: 100% 100%;
                 background-repeat: no-repeat;
@@ -214,27 +215,15 @@
       }
       .login-corner {
         position: absolute;
-        bottom: 0;
-        right: 10px;
+        bottom: 10px;
+        right: 15px;
         width: calc(50% - 120px);
         background: #fff;
-        border: 1px solid #e1e1e1;
+        border: 1px solid $borderColor;
+        color: $mainColor;
         padding: 1.5rem 1rem;
+        box-shadow: 0 0 15px rgba(0,0,0,.1);
         z-index: 2;
-        .form-control {
-          border-bottom: 1px solid $mainColor !important;
-          font-size: .8rem;
-          color: #a0a0a0;
-          caret-color: $mainColor;
-          &::placeholder {
-            color: #a0a0a0;
-            letter-spacing: 1px;
-            font-weight: 300;
-          }
-          &:placeholder-shown {
-            border-color: rgba(0,0,0,.2) !important;
-          }
-        }
         &:hover {
           z-index: 4;
         }
@@ -243,6 +232,9 @@
           bottom: initial;
           right: initial;
           width: 100%;
+        }
+        a {
+          color: inherit;
         }
       }
     }
@@ -279,15 +271,26 @@
 
 // TEXT SECTION STYLE
 .text-section {
+  .text-area {
+    padding: 1.5rem;
+    background: #fff;
+    border: 1px solid $borderColor;
+    @media (max-width: 850px) {
+      padding: 1.5rem 1rem;
+    }
+  }
   h2.text-title {
     @media (max-width: 850px) {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
+    }
+    span {
+      background: #fff;
     }
   }
   p.description {
     color: $textColor;
     @media (max-width: 850px) {
-      font-size: .9rem;
+      font-size: .8rem;
     }
   }
 }
@@ -297,6 +300,8 @@
 .sponsers .container {
   background: transparent;
   .sponsers-slider {
+    display: flex;
+    justify-content: space-evenly;
     .item {
       width: 120px !important;
       display: block !important;
