--- a/src/sass/partials/_homePage.scss
+++ b/src/sass/partials/_homePage.scss
@@ -174,10 +174,13 @@
             span {
               padding-right: .3rem;
             }
+            @media (max-width: 767px) {
+              font-size: 1.3rem;
+            }
           }
           p {
             color: $textColor;
-            font: 400 .9rem/1.8 $mainFont; 
+            font: 400 .9rem/1.8 $mainFont;
             animation: fadeOut .2s both;
             background: $lightColor;
             padding-bottom: 2rem;
@@ -214,16 +217,20 @@
         }
       }
       .login-corner {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
         position: absolute;
-        bottom: 10px;
+        bottom: 0;
         right: 15px;
         width: calc(50% - 120px);
         background: #fff;
         border: 1px solid $borderColor;
-        color: $mainColor;
         padding: 1.5rem 1rem;
-        box-shadow: 0 0 15px rgba(0,0,0,.1);
         z-index: 2;
+        .global-btn-style {
+          color: $mainColor;
+        }
         &:hover {
           z-index: 4;
         }
