--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -46,7 +46,10 @@ html
                                         p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aperiam soluta ipsa maxime pariatur id! consectetur adipisicing elit. Quos aspernatur voluptates quia labore mollitia tempore maiores hic adipisci!
                         .login-corner
                             .log-btn
-                                a(href='login,html').global-btn-style.text-capitalize login
+                                a(href='login.html').global-btn-style.text-capitalize login
+                            | |  |
+                            a(href='login.html').btn.text-capitalize.bg-secondary.text-white.rounded-0 
+                                small register
         hr
         section.text-section(data-aos='fade' data-aos-duration="2000")
             .container.p-4
