--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -23,8 +23,10 @@ header.header {
                     li.item {
                         border-right: 1px solid #000;
                         transition: all .1s linear;
-                        &:hover {
-                            background: rgba(0,0,0,.3);
+                        @media (min-width: 992px) {
+                            &:hover {
+                                background: rgba(0,0,0,.3);
+                            }
                         }
                         &:first-child {
                             border-bottom: 2px solid #f53b57;
@@ -63,9 +65,14 @@ header.header {
                         @media (max-width: 991px) {
                             width: 100%;
                             border-right: 0;
+                            border-bottom-width: 1px !important;
                             opacity: 0;
-                            transform: rotateY(90deg);
                             transition: all .2s linear;
+                            a.link {
+                                padding: .8rem 0;
+                                font-weight: 600;
+                                font-size: 1rem;
+                            }
                         }
                     }
                     @media (max-width: 991px) {
@@ -79,15 +86,15 @@ header.header {
                         flex-direction: column;
                         align-items: flex-start !important;
                         background: $darkColor;
-                        transform: translateY(-100%) rotatex(90deg);
-                        transition: all .5s cubic-bezier(0.44,-1.1, 0.63, 2.75);
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: all .3s linear;
                     }
                     &.mobile-navbar {
-                        transform: translateY(0) rotatex(0);
+                        opacity: 1;
+                        visibility: visible;
                         li.item {
                             opacity: 1;
-                            transform: rotateY(0);
-                            // transition: all .2s linear;
                             &:nth-child(1) {
                                 transition-delay: .4s;
                             }
