--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -4,6 +4,7 @@ header.header
             .logo
                 a(href='index.html')
                     img(src='img/logo.svg' class='img-fluid' draggable='false')
+            i.fas.fa-expand.toggle-fullscreen.text-white.fa-lg
             nav.nav
                 ul.links.d-flex.align-items-center
                     li.item
