--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,7 +27,7 @@ html
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is awesome
-                                        p.text-capitalize Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus blanditiis beatae distinctio quibusdam, quae delectus non saepe. Quisquam aliquam quaerat eos nam quis? Alias nulla fugit eaque ab sequi molestiae mollitia aliquam adipisci tempore facere delectus modi, unde at, corporis minus magnam! Vel iure ab vitae enim, quae possimus explicabo labore aspernatur consequuntur modi aperiam obcaecati omnis quisquam eligendi, assumenda id hic libero suscipit culpa magni? Unde consequatur obcaecati animi architecto esse pariatur adipisci enim. Incidunt tempore voluptates sunt nisi hic sint atque vel excepturi pariatur debitis quo, aperiam velit minus recusandae quia? Id obcaecati nisi dolor voluptate adipisci inventore? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus rem totam obcaecati magnam velit sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.
+                                        p.text-capitalize Lorem ipsum dolor sit amet lorem5 consectetur adipisicing elit. Doloribus blanditiis beatae distinctio quibusdam, quae delectus non saepe. Quisquam aliquam quaerat eos nam quis? Alias nulla fugit eaque ab sequi molestiae mollitia aliquam adipisci tempore facere delectus modi, unde at, corporis minus magnam! Vel iure ab vitae enim, quae possimus explicabo labore aspernatur consequuntur modi aperiam obcaecati omnis quisquam eligendi, assumenda id hic libero suscipit culpa magni? Unde consequatur obcaecati animi architecto esse pariatur adipisci enim. Incidunt tempore voluptates sunt nisi hic sint atque vel excepturi pariatur debitis quo, aperiam velit minus recusandae quia? Id obcaecati nisi dolor voluptate adipisci inventore? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus rem totam obcaecati magnam velit sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.
                                     .text--slide
                                         h1.text-uppercase.stroked-title
                                             span padel is nice sport to do
@@ -50,8 +50,8 @@ html
                             | |  |
                             a(href='login.html').btn.text-capitalize.bg-secondary.text-white.rounded-0 
                                 small register
-        hr
-        section.text-section(data-aos='fade' data-aos-duration="2000")
+
+        section.text-section.mt-5(data-aos='fade' data-aos-duration="2000")
             .container.p-4
                 .text-area
                     h2.text-title.text-uppercase.stroked-title.mb-4
@@ -64,8 +64,8 @@ html
                         | Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ut, enim saepe eveniet nemo tempora dolorem, architecto maxime ab neque quam ducimus facere mollitia! Aliquam sequi cumque quod alias quidem.
                     p.description
                         | Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ut, enim saepe eveniet nemo tempora dolorem, architecto maxime ab neque quam ducimus facere mollitia! Aliquam sequi cumque quod alias quidem.
-        hr
-        section.sponsers.py-5(data-aos='fade' data-aos-duration="2000")
+
+        section.sponsers.my-5(data-aos='fade' data-aos-duration="2000")
             .container
                 .sponsers-slider
                     .item
@@ -82,7 +82,7 @@ html
                         img(src='img/sponsersSlider/slide05.jpg' class='img-fluid')
                     .item
                         img(src='img/sponsersSlider/slide01.png' class='img-fluid')
-        hr
+
         include partials/footer
         include partials/footerScripts
         
