--- a/src/sass/partials/_homePage.scss
+++ b/src/sass/partials/_homePage.scss
@@ -1,5 +1,11 @@
 .banner {
   margin-top: 2.5rem;
+  .container {
+    opacity: .99;
+    .darkmode--activated & {
+      background: $darkColor !important;
+    }
+  }
 .inner-banner {
     padding: 3rem 0;
     //SLIDER STUFF
@@ -11,7 +17,11 @@
       .image-slider {
         padding: 1rem;
         background: #fff;
-        border: 1px solid $borderColor;    
+        border: 1px solid $borderColor;
+        .darkmode--activated & {
+          background: $darkColor;
+          border-color: #333;
+        }
         .slider--item {
           width: 100%;
           height: 400px;
@@ -38,7 +48,7 @@
         .slick-slide {
           position: relative;
           outline: none;
-          z-index: 1;  
+          z-index: 1;
           &.slick-current {
             z-index: 2;
           }
@@ -173,18 +183,28 @@
             animation: fadeOut .2s both;
             span {
               padding-right: .3rem;
+              .darkmode--activated & {
+                background: $darkColor;
+              }
             }
             @media (max-width: 767px) {
               font-size: 1.3rem;
             }
+            .darkmode--activated & {
+              -webkit-text-stroke-color: #fff;
+            }
           }
           p {
             color: $textColor;
-            font: 400 .9rem/1.8 $mainFont;
+            font: 400 .8rem/1.8 $textFont;
             animation: fadeOut .2s both;
             background: $lightColor;
             padding-bottom: 2rem;
             position: relative;
+            .darkmode--activated & {
+              background: $darkColor;
+              color: #888;
+            }
             &:before{
                 content:'';
                 position:absolute;
@@ -199,6 +219,10 @@
                 transition: all .3s linear;
                 @media (max-width: 992px) {
                   content: none;
+                }
+                .darkmode--activated & {
+                background: linear-gradient(to bottom, transparent 0%, $darkColor 90%);
+                  
                 }
             }
           }
@@ -223,11 +247,15 @@
         position: absolute;
         bottom: 0;
         right: 15px;
-        width: calc(50% - 120px);
+        width: calc(50% - 125px);
         background: #fff;
         border: 1px solid $borderColor;
         padding: 1.5rem 1rem;
         z-index: 2;
+        .darkmode--activated & {
+          background: #474747;
+          border-color: #000;
+        }
         .global-btn-style {
           color: $mainColor;
         }
@@ -285,6 +313,10 @@
     @media (max-width: 850px) {
       padding: 1.5rem 1rem;
     }
+    .darkmode--activated & {
+      background: #222;
+      border-color: #222;
+    }
   }
   h2.text-title {
     @media (max-width: 850px) {
@@ -292,6 +324,10 @@
     }
     span {
       background: #fff;
+      .darkmode--activated & {
+        background: #222;
+        -webkit-text-stroke-color: #fff;
+      }
     }
   }
   p.description {
@@ -299,29 +335,34 @@
     @media (max-width: 850px) {
       font-size: .8rem;
     }
+    .darkmode--activated & {
+      color: #888;
+    }
   }
 }
 
 // SPONSERS STYLE
-
-.sponsers .container {
-  background: transparent;
-  .sponsers-slider {
-    display: flex;
-    justify-content: space-evenly;
-    .item {
-      width: 120px !important;
-      display: block !important;
-      margin: auto;
-      height: 120px !important;
-      border-radius: 100%;
-      overflow: hidden;
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
+.sponsers {
+  .container {
+    background: $lightColor;
+    padding: 2rem 0;
+    .sponsers-slider {
+      display: flex;
+      justify-content: space-evenly;
+      .item {
+        width: 120px !important;
+        display: block !important;
+        margin: auto;
+        height: 120px !important;
         border-radius: 100%;
-        object-fit: cover;
+        overflow: hidden;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
