--- a/src/pug/partials/footerScripts.pug
+++ b/src/pug/partials/footerScripts.pug
@@ -4,4 +4,5 @@ script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bo
 script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js')
+script(src='https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js')
 script(src='js/all.min.js')
