--- a/src/sass/partials/_helper.scss
+++ b/src/sass/partials/_helper.scss
@@ -70,5 +70,9 @@
         transition: transform 0.2s ease-in-out, 
         width 0.3s ease-in-out 0.2s;
         }
+        &:before {
+            background: transparent;
+            transition-delay: .5s;
+        }
     }
 }
