--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
 $darkColor: #111;
 $lightColor: #f2f2f2;
 $mainColor: #8EA946;
-$textColor: #7e7e7e;
+$textColor: #555555;
 $borderColor: #e1e1e1;
 $mainFont: 'Dosis', sans-serif;
 $textFont: 'Poppins', sans-serif;
