--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,4 +12,5 @@
 @import "partials/helper";
 @import "partials/header";
 @import "partials/homePage";
+@import "partials/log";
 @import "partials/footer";
